--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afiladospostai</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 		<link rel="stylesheet" href="../css/estilos.css" />
 	</head>
 	<body>
@@ -27,7 +28,7 @@
 		<h1>nosotros</h1>
 		<div class="div-padre">
 			<img
-				class="sobreNos"
+				class="sobreNos animate__animated animate__bounce"
 				src="https://images.unsplash.com/photo-1617571607645-dd7dd3bf7f6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"
 			/>
 			<p class="notros__parrafo">
