--- a/index.html
+++ b/index.html
@@ -10,50 +10,54 @@
 		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
-		<header>
-			<div class="contenedor-header">
-				<a href="index.html">
-					<img src="imagenes/logo-removebg-preview.png" class="logo" />
-				</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">inicio</a></li>
-						<li><a href="pages/sobrenosotros.html">nosotros</a></li>
-						<li><a href="pages/horarios.html">horarios</a></li>
-						<li><a href="pages/insumos.html">insumos</a></li>
-						<li><a href="pages/contacto.html">contacto</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		<!-- Fin Header -->
-		<menu class="menu">
-			<h1>POSTAI</h1>
-			<h2>venta y afilados de herramientas,servicios industriales</h2>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem impedit, ipsam vel autem culpa, neque eveniet tenetur provident quis quos, magni odio deserunt iste? Recusandae modi natus reprehenderit iste dolorum.
-			Voluptate dolore accusamus, labore alias esse odio amet quae nobis qui sapiente quod impedit voluptatibus autem earum quidem laudantium quasi distinctio atque temporibus minima deleniti sit cupiditate minus. Quas, corporis.
-			Fugiat, nesciunt delectus veniam dolorem quasi eos quis vel similique! Velit doloremque beatae illo nesciunt reprehenderit, reiciendis exercitationem repellendus, assumenda amet fuga error unde voluptates cumque hic corrupti distinctio doloribus.
-			Nesciunt placeat molestias asperiores laboriosam quos, aliquam ducimus quisquam in libero officiis vero distinctio quo cupiditate a? Nostrum aliquam reiciendis voluptates dolorum id corrupti quidem voluptatum ut facilis, cum tempora?
-			Sed voluptas excepturi architecto cumque sunt, debitis officiis repellat itaque eos, autem dicta asperiores ipsam labore vitae ducimus ex. Velit placeat quae, temporibus hic voluptatum blanditiis ut maiores! Cupiditate, similique?
-			Ab, iure. Dolorum ab asperiores fugit iusto incidunt ipsam iure hic quibusdam, et qui ipsum itaque ipsa eos fuga molestiae nostrum accusantium magni provident voluptates sunt veritatis odit temporibus. Dolor.
-			Eaque, facere deserunt quod iure eveniet ipsam sed suscipit neque aperiam incidunt harum placeat, veniam quam voluptatibus pariatur. Amet libero accusamus quibusdam vitae, minus illo explicabo laudantium ipsam quidem nam.
-			Rerum nemo pariatur quisquam neque consectetur placeat, qui ipsam molestiae sed officia distinctio? Harum molestiae error nisi aliquid cumque magni, veniam in perferendis quibusdam possimus eveniet assumenda asperiores est. At!
-			Laborum esse veniam similique rerum perferendis cumque laudantium nisi ipsam dignissimos, fuga, quam nulla. Saepe, aspernatur laborum blanditiis, temporibus aliquid unde illum sint quidem at consectetur officia fuga quam molestiae.
-			Repellat maxime qui exercitationem officia ullam porro iste nihil, dolores dolor repudiandae, non nisi dolore assumenda accusamus placeat quo molestias cumque praesentium. Consectetur placeat culpa animi cum. Possimus, obcaecati omnis?
-			Quo sint a dolorum iure eaque aperiam. Itaque dignissimos nihil et. Possimus, veniam qui expedita saepe, amet dignissimos a sed non iure vero officia enim in suscipit voluptas perspiciatis ipsum.
-			Rem incidunt sit natus, dolorem iure distinctio, eius dignissimos, nam placeat ducimus consequuntur explicabo. At assumenda veritatis aperiam placeat repudiandae doloribus optio facilis corrupti, vel mollitia beatae excepturi aliquam laboriosam.
-			Tempora quibusdam consequatur quia veritatis laborum provident voluptatibus reiciendis qui mollitia, id est rem atque. Et, perferendis cumque asperiores saepe, provident nam, molestias eos excepturi vero quod rem assumenda blanditiis!
-			Esse, itaque. Quisquam harum quas alias perferendis voluptatem, ducimus dolor sequi doloribus cum consequuntur, exercitationem quo soluta necessitatibus! Sit natus placeat totam impedit vero in earum commodi vel blanditiis aut.
-			Eveniet impedit, natus alias est qui eaque dicta, quasi voluptatem dolores, blanditiis soluta asperiores iste suscipit accusamus. Voluptatibus iure inventore beatae sed illum minima qui, impedit eligendi dignissimos, quibusdam necessitatibus.</p>
-		</menu>
-		<footer>
-			<div class="contenedor-footer">
-				<h2>contacto:Martin Piccini</h2>
-				<img src="icon/fb.png">
-				<img src="icon/instagram.png">
-				<img src="icon/Whatsapp.png">
-				<img src="icon/location.png">
-		    </div>
-		</footer>
+		<div class="conteiner-fluid">
+			<header>
+				<div class="contenedor-header">
+					<a href="index.html">
+						<img src="imagenes/logo-removebg-preview.png" class="logo" />
+					</a>
+					<nav>
+						<ul class="nav justify-content-end">
+							<li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">inicio</a></li>
+							<li class="nav-item"><a class="nav-link"href="pages/sobrenosotros.html">nosotros</a></li>
+							<li class="nav-item"><a class="nav-link" href="pages/horarios.html">horarios</a></li>
+							<li class="nav-item"><a class="nav-link" href="pages/insumos.html">insumos</a></li>
+							<li class="nav-item"><a class="nav-link" href="pages/contacto.html">contacto</a></li>
+						</ul>
+					</nav>
+				</div>
+			</header>
+			<!-- Fin Header -->
+			<menu class="menu" class="conteiner-fluid">
+				<h1 class="fs-1">POSTAI</h1>
+				<h2 class="fs-3">venta y afilados de herramientas,servicios industriales</h2>
+				<section class="row">
+			        <article class="col-lg-5"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					</article>
+					<aside class="col-lg-7"><p class="fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, eum eveniet esse ipsa dicta nisi voluptatibus exercitationem labore, deleniti ducimus numquam, assumenda cupiditate illum culpa nesciunt reiciendis alias harum officiis!
+					Rerum facilis repudiandae pariatur aut ut veritatis numquam id libero ea nemo at nam, maxime dolorum doloremque vero ullam optio mollitia ad? Expedita voluptates culpa, vero libero ex veritatis temporibus.</aside>
+			    </section>
+				<section>
+					<h2 class="fs-4">NOVEDADES</h2>
+					<p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam natus error, perferendis, quia necessitatibus placeat officia impedit nihil consequatur magni ratione esse dolorum explicabo, voluptatum quo minima ducimus ut?</p>
+					<ol>
+						<li>novedad 1</a></li>
+						<li>novedad 2</a></li>
+						<li>novedad 3</a></li>
+						<li>novedad 4</a></li>
+						<li>novedad 5</a></li>
+					</ol>
+				</section>
+			</menu>
+			<footer>
+				<div class="contenedor-footer">
+					<h2>contacto:Martin Piccini</h2>
+					<img src="icon/fb.png">
+					<img src="icon/instagram.png">
+					<img src="icon/Whatsapp.png">
+					<img src="icon/location.png">
+				</div>
+			</footer>
+	    </div>
 	</body>
 </html>
