--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afiladospostai</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="../css/estilos.css" />
 	</head>
 	<body>
@@ -25,37 +26,35 @@
 			</div>
 		</header>
 		<!-- Fin Header -->
-		<h1>contacto</h1>
-		<form class="from">
-			<legend>formulario de contacto</legend>
-			<br />
-			<label for="nombre">Nombre</label><br />
-			<input type="text" name="nombre" /><br />
-			<label for="telefono">Teléfono</label><br />
-			<input type="number" name="telefono" /><br />
-			<label for="email">Email</label><br />
-			<input type="text" name="email" /><br />
-			<label for="nombre">consulta</label><br />
-			<textarea name="mensaje" placeholder="escriba su consulta"></textarea
-			><br />
-			<input type="submit" value="enviar" />
-			<input type="reset" value="vaciar" />
-		</form>
-		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem impedit, ipsam vel autem culpa, neque eveniet tenetur provident quis quos, magni odio deserunt iste? Recusandae modi natus reprehenderit iste dolorum.
-			Voluptate dolore accusamus, labore alias esse odio amet quae nobis qui sapiente quod impedit voluptatibus autem earum quidem laudantium quasi distinctio atque temporibus minima deleniti sit cupiditate minus. Quas, corporis.
-			Fugiat, nesciunt delectus veniam dolorem quasi eos quis vel similique! Velit doloremque beatae illo nesciunt reprehenderit, reiciendis exercitationem repellendus, assumenda amet fuga error unde voluptates cumque hic corrupti distinctio doloribus.
-			Nesciunt placeat molestias asperiores laboriosam quos, aliquam ducimus quisquam in libero officiis vero distinctio quo cupiditate a? Nostrum aliquam reiciendis voluptates dolorum id corrupti quidem voluptatum ut facilis, cum tempora?
-			Sed voluptas excepturi architecto cumque sunt, debitis officiis repellat itaque eos, autem dicta asperiores ipsam labore vitae ducimus ex. Velit placeat quae, temporibus hic voluptatum blanditiis ut maiores! Cupiditate, similique?
-			Ab, iure. Dolorum ab asperiores fugit iusto incidunt ipsam iure hic quibusdam, et qui ipsum itaque ipsa eos fuga molestiae nostrum accusantium magni provident voluptates sunt veritatis odit temporibus. Dolor.
-			Eaque, facere deserunt quod iure eveniet ipsam sed suscipit neque aperiam incidunt harum placeat, veniam quam voluptatibus pariatur. Amet libero accusamus quibusdam vitae, minus illo explicabo laudantium ipsam quidem nam.
-			Rerum nemo pariatur quisquam neque consectetur placeat, qui ipsam molestiae sed officia distinctio? Harum molestiae error nisi aliquid cumque magni, veniam in perferendis quibusdam possimus eveniet assumenda asperiores est. At!
-			Laborum esse veniam similique rerum perferendis cumque laudantium nisi ipsam dignissimos, fuga, quam nulla. Saepe, aspernatur laborum blanditiis, temporibus aliquid unde illum sint quidem at consectetur officia fuga quam molestiae.
-			Repellat maxime qui exercitationem officia ullam porro iste nihil, dolores dolor repudiandae, non nisi dolore assumenda accusamus placeat quo molestias cumque praesentium. Consectetur placeat culpa animi cum. Possimus, obcaecati omnis?
-			Quo sint a dolorum iure eaque aperiam. Itaque dignissimos nihil et. Possimus, veniam qui expedita saepe, amet dignissimos a sed non iure vero officia enim in suscipit voluptas perspiciatis ipsum.
-			Rem incidunt sit natus, dolorem iure distinctio, eius dignissimos, nam placeat ducimus consequuntur explicabo. At assumenda veritatis aperiam placeat repudiandae doloribus optio facilis corrupti, vel mollitia beatae excepturi aliquam laboriosam.
-			Tempora quibusdam consequatur quia veritatis laborum provident voluptatibus reiciendis qui mollitia, id est rem atque. Et, perferendis cumque asperiores saepe, provident nam, molestias eos excepturi vero quod rem assumenda blanditiis!
-			Esse, itaque. Quisquam harum quas alias perferendis voluptatem, ducimus dolor sequi doloribus cum consequuntur, exercitationem quo soluta necessitatibus! Sit natus placeat totam impedit vero in earum commodi vel blanditiis aut.
-			Eveniet impedit, natus alias est qui eaque dicta, quasi voluptatem dolores, blanditiis soluta asperiores iste suscipit accusamus. Voluptatibus iure inventore beatae sed illum minima qui, impedit eligendi dignissimos, quibusdam necessitatibus.</p>
+		<h1>Contacto</h1>
+		<div class="container">
+			<form>
+				<div class="col-sm-8">
+					<label for="nombre" class="form-label">Nombre y Apellido</label>
+					<input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="ingrese su Nombre y Apellido">
+	    		</div>
+				<div class="col-sm-8">
+					<label for="email" class="form-label">Email</label>
+					<input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="ingrese su email@gmail.com">
+	    		</div>
+				<div class="col-sm-8">
+					<label for="telefono" class="form-label">telefono</label>
+					<input type="number" class="form-control form-control-sm" id="colFormLabelSm" placeholder="ingrese su numero de celular">
+	    		</div>
+				<div class="col-sm-8">
+					<label for="consulta" class="form-label">consulta</label>
+					<input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="deje su consulta">
+				</div>
+				<br/>
+				<div class="from-group"> 
+					<input class="from-control" type="submit" value="enviar" />
+					<input class="from-control" type="reset" value="vaciar" />
+				</div>
+			</form>
+		</div>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id doloremque corrupti magnam eius cumque. Id non nihil a ipsam illum? Provident, fugiat voluptatibus. Nemo debitis repudiandae voluptatum at facere! Quibusdam.
+		Quia voluptatem incidunt repellendus! Adipisci, ad nisi nemo possimus praesentium repellat. Ratione maxime eveniet vel soluta excepturi ducimus deserunt reiciendis porro, facilis velit magnam officia eum nam dolore numquam asperiores.
+		Nesciunt, eum. Amet cum, dolorem quaerat rerum sunt, repellendus sint ipsum accusamus architecto recusandae eveniet inventore nesciunt non sed corporis harum voluptatem ea? Autem dolorem, natus eveniet vel non consequatur.</p>
 		<footer>
 			<div class="contenedor-footer">
 				<h2>contacto:Martin Piccini</h2>
