--- a/index.html
+++ b/index.html
@@ -12,34 +12,33 @@
 	<body>
 		<div class="conteiner-fluid">
 			<header>
-				<div class="contenedor-header">
+				<div class="contenedor-headerIndex">
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
 					<h1 class="fs-1">POSTAI</h1>
 					<h2 class="fs-3">venta y afilados de herramientas,servicios industriales</h2>
 					<nav>
-						<ul class="nav justify-content-end">
-							<li class="nav-item"><a class="nav-link active" aria-current="page" href="index html">inicio</a></li>
-							<li class="nav-item"><a class="nav-link"href="pages/sobrenosotros.html">nosotros</a></li>
-							<li class="nav-item"><a class="nav-link" href="pages/horarios.html">horarios</a></li>
-							<li class="nav-item"><a class="nav-link" href="pages/insumos.html">insumos</a></li>
-							<li class="nav-item"><a class="nav-link" href="pages/contacto.html">contacto</a></li>
+						<ul>
+							<li><a href="index.html">inicio</a></li>
+							<li><a href="pages/sobrenosotros.html">nosotros</a></li>
+							<li><a href="pages/horarios.html">horarios</a></li>
+							<li><a href="pages/insumos.html">insumos</a></li>
+							<li><a href="pages/contacto.html">contacto</a></li>
 						</ul>
 					</nav>
-					<a href="imagenes/img-fondo.png"></a>
 				</div>
 			</header>
 			<!-- Fin Header -->
-			<menu class="menu" class="conteiner-fluid">
+			<menu class="menu">
 				<section class="row">
 			        <article class="col-lg-5"><iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" ></iframe>
 					</article>
 					<aside class="col-lg-7"><p class="fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, eum eveniet esse ipsa dicta nisi voluptatibus exercitationem labore, deleniti ducimus numquam, assumenda cupiditate illum culpa nesciunt reiciendis alias harum officiis!
 					Rerum facilis repudiandae pariatur aut ut veritatis numquam id libero ea nemo at nam, maxime dolorum doloremque vero ullam optio mollitia ad? Expedita voluptates culpa, vero libero ex veritatis temporibus.</aside>
 			    </section>
-				<section>
-					<h2 class="fs-4">NOVEDADES</h2>
+				<section class="Servicios">
+					<h2 class="fs-4">Servicios</h2>
 					<p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam natus error, perferendis, quia necessitatibus placeat officia impedit nihil consequatur magni ratione esse dolorum explicabo, voluptatum quo minima ducimus ut?</p>
 					<ol>
 						<li>novedad 1</a></li>
@@ -50,7 +49,7 @@
 					</ol>
 				</section>
 				<section>
-					<h2>Servicios</h2>
+					<h2>novedades</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus et sunt laborum nemo eius aliquam, vel accusamus facere illum incidunt fugiat iure asperiores officiis alias? Dolorem unde necessitatibus est.</p>
 				</section>
 			</menu>
