--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="conteiner-fluid">
-			<header>
+			<header class="row">
 				<div class="contenedor-headerIndex">
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
@@ -30,7 +30,28 @@
 				</div>
 			</header>
 			<!-- Fin Header -->
-			<menu class="menu">
+			<menu class="menu row">
+				<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+					<div class="carousel-inner">
+					  <div class="carousel-item active">
+						<img src="..." class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="..." class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="..." class="d-block w-100" alt="...">
+					  </div>
+					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					  <span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					  <span class="visually-hidden">Next</span>
+					</button>
+				  </div>
 				<section class="row">
 			        <article class="col-lg-5"><iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" ></iframe>
 					</article>
@@ -53,7 +74,7 @@
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus et sunt laborum nemo eius aliquam, vel accusamus facere illum incidunt fugiat iure asperiores officiis alias? Dolorem unde necessitatibus est.</p>
 				</section>
 			</menu>
-			<footer>
+			<footer class="row">
 				<div>
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
