--- a/index.html
+++ b/index.html
@@ -31,27 +31,34 @@
 			</header>
 			<!-- Fin Header -->
 			<menu class="menu row">
-				<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-					<div class="carousel-inner">
-					  <div class="carousel-item active">
-						<img src="..." class="d-block w-100" alt="...">
+				<div class="carrusel">
+					<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-indicators">
+						  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+						  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+						  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+						</div>
+						<div class="carousel-inner">
+						  <div class="carousel-item active">
+							<img src="imagenes/carrusel1.png" class="d-block w-100" alt="...">
+						  </div>
+						  <div class="carousel-item">
+							<img src="imagenes/carrusel2.png" class="d-block w-100" alt="...">
+						  </div>
+						  <div class="carousel-item">
+							<img src="imagenes/carrusel 3.png" class="d-block w-100" alt="...">
+						  </div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						  <span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						  <span class="visually-hidden">Next</span>
+						</button>
 					  </div>
-					  <div class="carousel-item">
-						<img src="..." class="d-block w-100" alt="...">
-					  </div>
-					  <div class="carousel-item">
-						<img src="..." class="d-block w-100" alt="...">
-					  </div>
-					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					  <span class="visually-hidden">Previous</span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					  <span class="visually-hidden">Next</span>
-					</button>
-				  </div>
+				</div>
 				<section class="row">
 			        <article class="col-lg-5"><iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" ></iframe>
 					</article>
