--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -77,14 +77,17 @@
 			Tempora quibusdam consequatur quia veritatis laborum provident voluptatibus reiciendis qui mollitia, id est rem atque. Et, perferendis cumque asperiores saepe, provident nam, molestias eos excepturi vero quod rem assumenda blanditiis!
 			Esse, itaque. Quisquam harum quas alias perferendis voluptatem, ducimus dolor sequi doloribus cum consequuntur, exercitationem quo soluta necessitatibus! Sit natus placeat totam impedit vero in earum commodi vel blanditiis aut.
 			Eveniet impedit, natus alias est qui eaque dicta, quasi voluptatem dolores, blanditiis soluta asperiores iste suscipit accusamus. Voluptatibus iure inventore beatae sed illum minima qui, impedit eligendi dignissimos, quibusdam necessitatibus.</p>
-		<footer>
-			<div class="contenedor-footer">
-				<h2>contacto:Martin Piccini</h2>
-				<img src="../icon/fb.png">
-				<img src="../icon/instagram.png">
-				<img src="../icon/Whatsapp.png">
-				<img src="../icon/location.png">
-		    </div>
-		</footer>
+			<footer>
+				<div class="contenedor-footer">
+					<h2>contacto:Martin Piccini</h2>
+					<div>
+						<img src="../icon/fb.png">
+						<img src="../icon/instagram.png">
+						<img src="../icon/Whatsapp.png">
+						<img src="../icon/location.png">
+					</div>
+					
+				</div>
+			</footer>
 	</body>
 </html>
