--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -73,13 +73,16 @@
             <p>datos de la imagen</p>
         </div>
     </section>
-    <footer>
+    <<footer>
         <div class="contenedor-footer">
             <h2>contacto:Martin Piccini</h2>
-            <img src="../icon/fb.png">
-            <img src="../icon/instagram.png">
-            <img src="../icon/Whatsapp.png">
-            <img src="../icon/location.png">
+            <div>
+                <img src="../icon/fb.png">
+                <img src="../icon/instagram.png">
+                <img src="../icon/Whatsapp.png">
+                <img src="../icon/location.png">
+            </div>
+            
         </div>
     </footer>
 </body>
