--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<title>Afiladospostai</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="shortcut icon" href="imagenes/favicon.png" />
+		<link
+		rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
@@ -16,7 +19,7 @@
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
-					<h1 class="fs-1">POSTAI</h1>
+					<h1 class="fs-1" >Postai</h1>
 					<h2 class="fs-3">venta y afilados de herramientas,servicios industriales</h2>
 					<nav>
 						<ul>
@@ -31,40 +34,16 @@
 			</header>
 			<!-- Fin Header -->
 			<menu class="menu row">
-				<div class="carrusel">
-					<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-						<div class="carousel-indicators">
-						  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-						  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-						  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-						</div>
-						<div class="carousel-inner">
-						  <div class="carousel-item active">
-							<img src="imagenes/carrusel1.png" class="d-block w-100" alt="...">
-						  </div>
-						  <div class="carousel-item">
-							<img src="imagenes/carrusel2.png" class="d-block w-100" alt="...">
-						  </div>
-						  <div class="carousel-item">
-							<img src="imagenes/carrusel 3.png" class="d-block w-100" alt="...">
-						  </div>
-						</div>
-						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						  <span class="visually-hidden">Previous</span>
-						</button>
-						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-						  <span class="visually-hidden">Next</span>
-						</button>
-					  </div>
-				</div>
 				<section class="row">
-			        <article class="col-lg-5"><iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" ></iframe>
+					<h2>¿Como llegar?</h2>
+					<article class="col-lg-5">
+						<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" ></iframe>
 					</article>
-					<aside class="col-lg-7"><p class="fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, eum eveniet esse ipsa dicta nisi voluptatibus exercitationem labore, deleniti ducimus numquam, assumenda cupiditate illum culpa nesciunt reiciendis alias harum officiis!
-					Rerum facilis repudiandae pariatur aut ut veritatis numquam id libero ea nemo at nam, maxime dolorum doloremque vero ullam optio mollitia ad? Expedita voluptates culpa, vero libero ex veritatis temporibus.</aside>
-			    </section>
+					<aside class="col-lg-7">
+						<p class="fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, eum eveniet esse ipsa dicta nisi voluptatibus exercitationem labore, deleniti ducimus numquam, assumenda cupiditate illum culpa nesciunt reiciendis alias harum officiis!
+							Rerum facilis repudiandae pariatur aut ut veritatis numquam id libero ea nemo at nam, maxime dolorum doloremque vero ullam optio mollitia ad? Expedita voluptates culpa, vero libero ex veritatis temporibus.</p>
+					</aside>
+				</section>	
 				<section class="Servicios">
 					<h2 class="fs-4">Servicios</h2>
 					<p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam natus error, perferendis, quia necessitatibus placeat officia impedit nihil consequatur magni ratione esse dolorum explicabo, voluptatum quo minima ducimus ut?</p>
@@ -81,33 +60,35 @@
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus et sunt laborum nemo eius aliquam, vel accusamus facere illum incidunt fugiat iure asperiores officiis alias? Dolorem unde necessitatibus est.</p>
 				</section>
 			</menu>
-			<footer class="row">
-				<div>
-					<a href="index.html">
-						<img src="imagenes/logo-removebg-preview.png" class="logo" />
-					</a>
-				</div>
+			<footer class="row" >
 				<div class="contenedor-footer">
-					<h2>contacto</h2>
-					<p>
-						Martin piccini
-						cel:342- 8388723873
-						fijo: 342 4608997
-					</p>
-				</div>
-				<div>
-					<a href="https://www.facebook.com/martinalepiccini">
-						<img src="icon/fb.png">
-					</a>
-					<a href="https://z-p15.www.instagram.com/afiladospostai/"> 
-                        <img src="icon/instagram.png">
-					</a>
-					<a href="https://web.whatsapp.com/"> 
-                        <img src="icon/Whatsapp.png">
-					</a>
-					<a href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"> 
-                        <img src="icon/location.png">
-					</a>
+					<div>
+						<a href="index.html">
+							<img src="imagenes/logo-removebg-preview.png" class="logo" />
+						</a>
+					</div>
+					<div>
+						<h2>contacto</h2>
+						<p>
+							Martin piccini
+							cel:342- 8388723873
+							fijo: 342 4608997
+						</p>
+					</div>
+					<div class= "animate__animated animate__lightSpeedInRight">
+						<a href="https://www.facebook.com/martinalepiccini">
+							<img src="icon/fb.png">
+						</a>
+						<a href="https://z-p15.www.instagram.com/afiladospostai/"> 
+							<img src="icon/instagram.png">
+						</a>
+						<a href="https://web.whatsapp.com/"> 
+							<img src="icon/Whatsapp.png">
+						</a>
+						<a href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"> 
+							<img src="icon/location.png">
+						</a>
+					</div>
 				</div>
 			</footer>
 	    </div>
