--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,11 +58,14 @@
 		<footer>
 			<div class="contenedor-footer">
 				<h2>contacto:Martin Piccini</h2>
-				<img src="../icon/fb.png">
-				<img src="../icon/instagram.png">
-				<img src="../icon/Whatsapp.png">
-				<img src="../icon/location.png">
-		    </div>
+				<div>
+					<img src="../icon/fb.png">
+					<img src="../icon/instagram.png">
+					<img src="../icon/Whatsapp.png">
+					<img src="../icon/location.png">
+				</div>
+				
+			</div>
 		</footer>
 	</body>
 </html>
