--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afiladospostai</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<link rel="shortcut icon" href="imagenes/favicon.png" />
 		<link
 		rel="stylesheet"
@@ -34,6 +35,29 @@
 			</header>
 			<!-- Fin Header -->
 			<menu class="menu row">
+				<div class="carrusel">
+					<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="imagenes/carrusel1.png" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="imagenes/carrusel2.png" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="imagenes/carrusel3.png" class="d-block w-100" alt="...">
+						</div>
+						</div>
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
 				<section class="row">
 					<h2>¿Como llegar?</h2>
 					<article class="col-lg-5">
