--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afiladospostai</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="../css/estilos.css" />
 	</head>
 	<body>
@@ -27,44 +32,80 @@
 		</header>
 		<!-- Fin Header -->
 		<h1>Contacto</h1>
-		<div class="container">
+		<div class="container border border-secondary p-3">
 			<form>
 				<div class="col-sm-8">
 					<label for="nombre" class="form-label">Nombre y Apellido</label>
-					<input type="text" class="form-control form-control-sm" id="colFormLabelSm" placeholder="ingrese su Nombre y Apellido">
-	    		</div>
+					<input
+						type="text"
+						class="form-control form-control-sm"
+						id="colFormLabelSm"
+						placeholder="ingrese su Nombre y Apellido"
+					/>
+				</div>
 				<div class="col-sm-8">
 					<label for="email" class="form-label">Email</label>
-					<input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="ingrese su email@gmail.com">
-	    		</div>
+					<input
+						type="email"
+						class="form-control form-control-sm"
+						id="colFormLabelSm"
+						placeholder="ingrese su email@gmail.com"
+					/>
+				</div>
 				<div class="col-sm-8">
 					<label for="telefono" class="form-label">telefono</label>
-					<input type="number" class="form-control form-control-sm" id="colFormLabelSm" placeholder="ingrese su numero de celular">
-	    		</div>
+					<input
+						type="number"
+						class="form-control form-control-sm"
+						id="colFormLabelSm"
+						placeholder="ingrese su numero de celular"
+					/>
+				</div>
 				<div class="col-sm-8">
 					<label for="consulta" class="form-label">consulta</label>
-					<input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="deje su consulta">
+					<input
+						type="email"
+						class="form-control form-control-lg"
+						id="colFormLabelLg"
+						placeholder="deje su consulta"
+					/>
 				</div>
-				<br/>
-				<div class="from-group"> 
-					<input class="from-control" type="submit" value="enviar" />
-					<input class="from-control" type="reset" value="vaciar" />
+				<br />
+				<div class="from-group">
+					<input
+						class="from-control btn btn-primary"
+						type="submit"
+						value="enviar"
+					/>
+					<input
+						class="from-control btn btn-outline-dark"
+						type="reset"
+						value="vaciar"
+					/>
 				</div>
 			</form>
 		</div>
-		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id doloremque corrupti magnam eius cumque. Id non nihil a ipsam illum? Provident, fugiat voluptatibus. Nemo debitis repudiandae voluptatum at facere! Quibusdam.
-		Quia voluptatem incidunt repellendus! Adipisci, ad nisi nemo possimus praesentium repellat. Ratione maxime eveniet vel soluta excepturi ducimus deserunt reiciendis porro, facilis velit magnam officia eum nam dolore numquam asperiores.
-		Nesciunt, eum. Amet cum, dolorem quaerat rerum sunt, repellendus sint ipsum accusamus architecto recusandae eveniet inventore nesciunt non sed corporis harum voluptatem ea? Autem dolorem, natus eveniet vel non consequatur.</p>
+		<p>
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id doloremque
+			corrupti magnam eius cumque. Id non nihil a ipsam illum? Provident, fugiat
+			voluptatibus. Nemo debitis repudiandae voluptatum at facere! Quibusdam.
+			Quia voluptatem incidunt repellendus! Adipisci, ad nisi nemo possimus
+			praesentium repellat. Ratione maxime eveniet vel soluta excepturi ducimus
+			deserunt reiciendis porro, facilis velit magnam officia eum nam dolore
+			numquam asperiores. Nesciunt, eum. Amet cum, dolorem quaerat rerum sunt,
+			repellendus sint ipsum accusamus architecto recusandae eveniet inventore
+			nesciunt non sed corporis harum voluptatem ea? Autem dolorem, natus
+			eveniet vel non consequatur.
+		</p>
 		<footer>
 			<div class="contenedor-footer">
 				<h2>contacto:Martin Piccini</h2>
 				<div>
-					<img src="../icon/fb.png">
-					<img src="../icon/instagram.png">
-					<img src="../icon/Whatsapp.png">
-					<img src="../icon/location.png">
+					<img src="../icon/fb.png" />
+					<img src="../icon/instagram.png" />
+					<img src="../icon/Whatsapp.png" />
+					<img src="../icon/location.png" />
 				</div>
-				
 			</div>
 		</footer>
 	</body>
