--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -6,88 +6,88 @@
 		<title>Afiladospostai</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
 		<link rel="stylesheet" href="../css/estilos.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="../css/estilos.css" />
 	</head>
 	<body>
-		<header>
-			<div class="contenedor-header">
-				<a href="../index.html">
-					<img src="../imagenes/logo-removebg-preview.png" class="logo" />
-				</a>
-				<nav>
-					<ul>
-						<li><a href="../index.html">inicio</a></li>
-						<li><a href="sobrenosotros.html">nosotros</a></li>
-						<li><a href="horarios.html">horarios</a></li>
-						<li><a href="insumos.html">insumos</a></li>
-						<li><a href="contacto.html">contacto</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		<!-- Fin Header -->
-		<h1>Horarios de atención</h1>
-		<div class="divHorarios">
-			<section class="section">
-				<table>
-					<thead>
+		<div class="body">
+			<header>
+				<div class="contenedor-header">
+					<a href="../index.html">
+						<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+					</a>
+					<nav>
+						<ul>
+							<li><a href="../index.html">inicio</a></li>
+							<li><a href="sobrenosotros.html">nosotros</a></li>
+							<li><a href="horarios.html">horarios</a></li>
+							<li><a href="insumos.html">insumos</a></li>
+							<li><a href="contacto.html">contacto</a></li>
+						</ul>
+					</nav>
+				</div>
+			</header>
+			<!-- Fin Header -->
+			<h1>Horarios de atención</h1>
+			<div class="divHorarios">
+				<section class="section">
+					<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th>Dias</th>
+								<th>Horario</th>
+							</tr>
+						</thead>
 						<tr>
-							<th>Dias</th>
-							<th>Horario</th>
+							<th>lunes</th>
+							<th>9a15</th>
 						</tr>
-					</thead>
-					<tr>
-						<th>lunes</th>
-						<th>9a15</th>
-					</tr>
-					<tr>
-						<th>martes</th>
-						<th>9a15</th>
-					</tr>
-					<tr>
-						<th>miercoles</th>
-						<th>9a15</th>
-					</tr>
-					<tr>
-						<th>jueves</th>
-						<th>8a13</th>
-					</tr>
-					<tr>
-						<th>viernes</th>
-						<th>8a13</th>
-					</tr>
-				</table>
-			</section>
-			<aside >
-				<p class="horarioParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid perferendis voluptatibus in quas eos perspiciatis doloremque, placeat, iure repellat eum? Dolorum quo ullam nihil ab facere, laborum officia veniam.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque possimus ut quod magni repudiandae in suscipit ullam itaque. Enim minima architecto repellendus error cupiditate illum! Accusamus beatae maiores repellendus fugiat.
-				</p>
-			</aside>
-		</div>
-		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem impedit, ipsam vel autem culpa, neque eveniet tenetur provident quis quos, magni odio deserunt iste? Recusandae modi natus reprehenderit iste dolorum.
-			Voluptate dolore accusamus, labore alias esse odio amet quae nobis qui sapiente quod impedit voluptatibus autem earum quidem laudantium quasi distinctio atque temporibus minima deleniti sit cupiditate minus. Quas, corporis.
-			Fugiat, nesciunt delectus veniam dolorem quasi eos quis vel similique! Velit doloremque beatae illo nesciunt reprehenderit, reiciendis exercitationem repellendus, assumenda amet fuga error unde voluptates cumque hic corrupti distinctio doloribus.
-			Nesciunt placeat molestias asperiores laboriosam quos, aliquam ducimus quisquam in libero officiis vero distinctio quo cupiditate a? Nostrum aliquam reiciendis voluptates dolorum id corrupti quidem voluptatum ut facilis, cum tempora?
-			Sed voluptas excepturi architecto cumque sunt, debitis officiis repellat itaque eos, autem dicta asperiores ipsam labore vitae ducimus ex. Velit placeat quae, temporibus hic voluptatum blanditiis ut maiores! Cupiditate, similique?
-			Ab, iure. Dolorum ab asperiores fugit iusto incidunt ipsam iure hic quibusdam, et qui ipsum itaque ipsa eos fuga molestiae nostrum accusantium magni provident voluptates sunt veritatis odit temporibus. Dolor.
-			Eaque, facere deserunt quod iure eveniet ipsam sed suscipit neque aperiam incidunt harum placeat, veniam quam voluptatibus pariatur. Amet libero accusamus quibusdam vitae, minus illo explicabo laudantium ipsam quidem nam.
-			Rerum nemo pariatur quisquam neque consectetur placeat, qui ipsam molestiae sed officia distinctio? Harum molestiae error nisi aliquid cumque magni, veniam in perferendis quibusdam possimus eveniet assumenda asperiores est. At!
-			Laborum esse veniam similique rerum perferendis cumque laudantium nisi ipsam dignissimos, fuga, quam nulla. Saepe, aspernatur laborum blanditiis, temporibus aliquid unde illum sint quidem at consectetur officia fuga quam molestiae.
-			Repellat maxime qui exercitationem officia ullam porro iste nihil, dolores dolor repudiandae, non nisi dolore assumenda accusamus placeat quo molestias cumque praesentium. Consectetur placeat culpa animi cum. Possimus, obcaecati omnis?
-			Quo sint a dolorum iure eaque aperiam. Itaque dignissimos nihil et. Possimus, veniam qui expedita saepe, amet dignissimos a sed non iure vero officia enim in suscipit voluptas perspiciatis ipsum.
-			Rem incidunt sit natus, dolorem iure distinctio, eius dignissimos, nam placeat ducimus consequuntur explicabo. At assumenda veritatis aperiam placeat repudiandae doloribus optio facilis corrupti, vel mollitia beatae excepturi aliquam laboriosam.
-			Tempora quibusdam consequatur quia veritatis laborum provident voluptatibus reiciendis qui mollitia, id est rem atque. Et, perferendis cumque asperiores saepe, provident nam, molestias eos excepturi vero quod rem assumenda blanditiis!
-			Esse, itaque. Quisquam harum quas alias perferendis voluptatem, ducimus dolor sequi doloribus cum consequuntur, exercitationem quo soluta necessitatibus! Sit natus placeat totam impedit vero in earum commodi vel blanditiis aut.
-			Eveniet impedit, natus alias est qui eaque dicta, quasi voluptatem dolores, blanditiis soluta asperiores iste suscipit accusamus. Voluptatibus iure inventore beatae sed illum minima qui, impedit eligendi dignissimos, quibusdam necessitatibus.</p>
-			<footer>
+						<tr>
+							<th>martes</th>
+							<th>9a15</th>
+						</tr>
+						<tr>
+							<th>miercoles</th>
+							<th>9a15</th>
+						</tr>
+						<tr>
+							<th>jueves</th>
+							<th>8a13</th>
+						</tr>
+						<tr>
+							<th>viernes</th>
+							<th>8a13</th>
+						</tr>
+					</table>
+				</section>
+				<aside>
+					<p class="horarioParrafo">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid
+						perferendis voluptatibus in quas eos perspiciatis doloremque, placeat,
+						iure repellat eum? Dolorum quo ullam nihil ab facere, laborum officia
+						veniam.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+						possimus ut quod magni repudiandae in suscipit ullam itaque. Enim
+						minima architecto repellendus error cupiditate illum! Accusamus beatae
+						maiores repellendus fugiat.
+					</p>
+				</aside>
+			</div>
+			<footer id="footer">
 				<div class="contenedor-footer">
 					<h2>contacto:Martin Piccini</h2>
 					<div>
-						<img src="../icon/fb.png">
-						<img src="../icon/instagram.png">
-						<img src="../icon/Whatsapp.png">
-						<img src="../icon/location.png">
+						<img src="../icon/fb.png" />
+						<img src="../icon/instagram.png" />
+						<img src="../icon/Whatsapp.png" />
+						<img src="../icon/location.png" />
 					</div>
-					
 				</div>
 			</footer>
+	    </div>
 	</body>
 </html>
