--- a/index.html
+++ b/index.html
@@ -5,30 +5,42 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afiladospostai</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
 		<link rel="shortcut icon" href="imagenes/favicon.png" />
 		<link
-		rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
 		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
-		<div class="conteiner-fluid">
+		<div class="conteiner">
 			<header class="row">
 				<div class="contenedor-headerIndex">
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
-					<h1 class="fs-1" >Postai</h1>
-					<h2 class="fs-3">venta y afilados de herramientas,servicios industriales</h2>
+					<h1 class="fs-1">Postai</h1>
+					<h2 class="fs-3">
+						venta y afilados de herramientas,servicios industriales
+					</h2>
 					<nav>
 						<ul>
-							<li><a href="index.html">inicio</a></li>
-							<li><a href="pages/sobrenosotros.html">nosotros</a></li>
-							<li><a href="pages/horarios.html">horarios</a></li>
-							<li><a href="pages/insumos.html">insumos</a></li>
-							<li><a href="pages/contacto.html">contacto</a></li>
+							<li><a href="index.html">INICIO</a></li>
+							<li><a href="pages/sobrenosotros.html">NOSOTROS</a></li>
+							<li><a href="pages/horarios.html">HORARIOS</a></li>
+							<li><a href="pages/insumos.html">INSUMOS</a></li>
+							<li><a href="pages/contacto.html">CONTACTO</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,7 +48,12 @@
 			<!-- Fin Header -->
 			<menu class="menu row">
 				<div class="carrusel">
-					<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+					<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+						<div class="carousel-indicators">
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+						</div>
 						<div class="carousel-inner">
 						<div class="carousel-item active">
 							<img src="imagenes/carrusel1.png" class="d-block w-100" alt="...">
@@ -48,11 +65,11 @@
 							<img src="imagenes/carrusel3.png" class="d-block w-100" alt="...">
 						</div>
 						</div>
-						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 							<span class="visually-hidden">Previous</span>
 						</button>
-						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 							<span class="carousel-control-next-icon" aria-hidden="true"></span>
 							<span class="visually-hidden">Next</span>
 						</button>
@@ -60,23 +77,35 @@
 				</div>
 				<section class="row">
 					<h2>¿Como llegar?</h2>
-					<article class="col-lg-5">
-						<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar" width="600" height="400" ></iframe>
+					<article class="col-lg-7 col-xl-6 col-sm-12">
+						<iframe
+							class="mapa"
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar"
+							width="600"
+							height="400"
+						></iframe>
 					</article>
-					<aside class="col-lg-7">
-						<p class="fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, eum eveniet esse ipsa dicta nisi voluptatibus exercitationem labore, deleniti ducimus numquam, assumenda cupiditate illum culpa nesciunt reiciendis alias harum officiis!
-							Rerum facilis repudiandae pariatur aut ut veritatis numquam id libero ea nemo at nam, maxime dolorum doloremque vero ullam optio mollitia ad? Expedita voluptates culpa, vero libero ex veritatis temporibus.</p>
+					<aside class="col-lg-5 col-xl-6 col-sm-12">
+						<p class="fs-4">
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint,
+							eum eveniet esse ipsa dicta nisi voluptatibus exercitationem
+							labore, deleniti ducimus numquam, assumenda cupiditate illum culpa
+							nesciunt reiciendis alias harum officiis! Rerum facilis
+							repudiandae pariatur aut ut veritatis numquam id libero ea nemo at
+							nam, maxime dolorum doloremque vero ullam optio mollitia ad?
+							Expedita voluptates culpa, vero libero ex veritatis temporibus.
+						</p>
 					</aside>
-				</section>	
+				</section>
 				<section class="Servicios">
 					<h2 class="fs-4">Servicios</h2>
 					<p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam natus error, perferendis, quia necessitatibus placeat officia impedit nihil consequatur magni ratione esse dolorum explicabo, voluptatum quo minima ducimus ut?</p>
-					<ol>
-						<li>novedad 1</a></li>
-						<li>novedad 2</a></li>
-						<li>novedad 3</a></li>
-						<li>novedad 4</a></li>
-						<li>novedad 5</a></li>
+					<ol class="list-novedades">
+						<li class="list-item-nov">novedad 1</a></li>
+						<li class="list-item-nov">novedad 2</a></li>
+						<li class="list-item-nov">novedad 3</a></li>
+						<li class="list-item-nov">novedad 4</a></li>
+						<li class="list-item-nov">novedad 5</a></li>
 					</ol>
 				</section>
 				<section>
@@ -84,7 +113,7 @@
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus et sunt laborum nemo eius aliquam, vel accusamus facere illum incidunt fugiat iure asperiores officiis alias? Dolorem unde necessitatibus est.</p>
 				</section>
 			</menu>
-			<footer class="row" >
+			<footer class="row">
 				<div class="contenedor-footer">
 					<div>
 						<a href="index.html">
@@ -93,28 +122,26 @@
 					</div>
 					<div>
 						<h2>contacto</h2>
-						<p>
-							Martin piccini
-							cel:342- 8388723873
-							fijo: 342 4608997
-						</p>
+						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
 					</div>
-					<div class= "animate__animated animate__lightSpeedInRight">
+					<div class="animate__animated animate__lightSpeedInRight">
 						<a href="https://www.facebook.com/martinalepiccini">
-							<img src="icon/fb.png">
+							<img src="icon/fb.png" />
 						</a>
-						<a href="https://z-p15.www.instagram.com/afiladospostai/"> 
-							<img src="icon/instagram.png">
+						<a href="https://z-p15.www.instagram.com/afiladospostai/">
+							<img src="icon/instagram.png" />
 						</a>
-						<a href="https://web.whatsapp.com/"> 
-							<img src="icon/Whatsapp.png">
+						<a href="https://wa.me/5493424308844/">
+							<img src="icon/Whatsapp.png" />
 						</a>
-						<a href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"> 
-							<img src="icon/location.png">
+						<a
+							href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183"
+						>
+							<img src="icon/location.png" />
 						</a>
 					</div>
 				</div>
 			</footer>
-	    </div>
+		</div>
 	</body>
 </html>
