--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -1,89 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Afiladospostai</title>
-    <link rel="shortcut icon" href="../imagenes/favicon.png">
-    <link rel="stylesheet" href="../css/estilos.css">
-</head>
-<body>
-    <header>
-			<div class="contenedor-header">
-				<a href="../index.html">
-					<img src="../imagenes/logo-removebg-preview.png" class="logo" />
-				</a>
-				<nav>
-					<ul>
-						<li><a href="../index.html">inicio</a></li>
-						<li><a href="sobrenosotros.html">nosotros</a></li>
-						<li><a href="horarios.html">horarios</a></li>
-						<li><a href="insumos.html">insumos</a></li>
-						<li><a href="contacto.html">contacto</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		<!-- Fin Header -->
-    <h1>Insumos</h1>
-    <section class="contenedor gridPadre" >
-        <div class="gridHijos">
-            <h2>sierras sinfin</h2>
-            <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-            <p>datos de la imagen</p>
-        </div>
-        <div class="gridHijos">
-            <h2>sierras circulares</h2>
-            <img class="imagenChica" src="../imagenes/circular.png">
-            <p>datos de la imagen</p>
-        </div>
-        <div class="gridHijos">
-            <h2>sierras copa</h2>
-            <img class="imagenChica" src="../imagenes/copa.png">
-            <p>datos de la imagen</p>
-        </div>
-        <div class="gridHijos">
-            <h2>serruchos</h2>
-            <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-            <p>datos de la imagen</p>
-        </div>
-        <div class="gridHijos">
-            <h2>mechas</h2>
-            <img class="imagenChica" src="../imagenes/mechas.png">
-            <p>datos de la imagen</p></div>
-        <div class="gridHijos">
-            <h2>Disco de lija</h2>
-            <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-            <p>datos de la imagen</p>
-        </div>
-        <div class="gridHijos">
-            <h2>hojas de lija</h2>
-            <img class="imagenChica" src="../imagenes/lijas.png">
-            <p>datos de la imagen</p></div>
-        </div>
-        <div class="gridHijos">
-            <h2>bandas para lijadora</h2>
-            <img class="imagenChica" src="../imagenes/banda.png">
-            <p>datos de la imagen</p>
-        </div>
-        <div class="gridHijos">
-            <h2>cuchillas</h2>
-            <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
-            <p>datos de la imagen</p>
-        </div>
-    </section>
-    <<footer>
-        <div class="contenedor-footer">
-            <h2>contacto:Martin Piccini</h2>
-            <div>
-                <img src="../icon/fb.png">
-                <img src="../icon/instagram.png">
-                <img src="../icon/Whatsapp.png">
-                <img src="../icon/location.png">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Afiladospostai</title>
+        <link rel="shortcut icon" href="../imagenes/favicon.png">
+        <link
+                href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+                rel="stylesheet"
+                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+                crossorigin="anonymous"
+            />
+        <link rel="stylesheet" href="../css/estilos.css">
+    </head>
+    <body>
+        <header>
+                <div class="contenedor-header">
+                    <a href="../index.html">
+                        <img src="../imagenes/logo-removebg-preview.png" class="logo" />
+                    </a>
+                    <nav>
+                        <ul>
+                            <li><a href="../index.html">inicio</a></li>
+                            <li><a href="sobrenosotros.html">nosotros</a></li>
+                            <li><a href="horarios.html">horarios</a></li>
+                            <li><a href="insumos.html">insumos</a></li>
+                            <li><a href="contacto.html">contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+            <!-- Fin Header -->
+        <h1>Insumos</h1>
+        <section class="contenedor gridPadre" >
+            <div class="gridHijos ">
+                <h2>sierras sinfin</h2>
+                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
+                <p>datos de la imagen</p>
             </div>
-            
-        </div>
-    </footer>
-</body>
+            <div class="gridHijos">
+                <h2>sierras circulares</h2>
+                <img class="imagenChica" src="../imagenes/circular.png">
+                <p>datos de la imagen</p>
+            </div>
+            <div class="gridHijos">
+                <h2>sierras copa</h2>
+                <img class="imagenChica" src="../imagenes/copa.png">
+                <p>datos de la imagen</p>
+            </div>
+            <div class="gridHijos">
+                <h2>serruchos</h2>
+                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
+                <p>datos de la imagen</p>
+            </div>
+            <div class="gridHijos">
+                <h2>mechas</h2>
+                <img class="imagenChica" src="../imagenes/mechas.png">
+                <p>datos de la imagen</p></div>
+            <div class="gridHijos">
+                <h2>Disco de lija</h2>
+                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
+                <p>datos de la imagen</p>
+            </div>
+            <div class="gridHijos">
+                <h2>hojas de lija</h2>
+                <img class="imagenChica" src="../imagenes/lijas.png">
+                <p>datos de la imagen</p></div>
+            </div>
+            <div class="gridHijos">
+                <h2>bandas para lijadora</h2>
+                <img class="imagenChica" src="../imagenes/banda.png">
+                <p>datos de la imagen</p>
+            </div>
+            <div class="gridHijos">
+                <h2>cuchillas</h2>
+                <img class="imagenChica" src="../imagenes/sierrasinfin.jpg">
+                <p>datos de la imagen</p>
+            </div>
+        </section>
+        <footer >
+            <div class="contenedor-footer">
+                <h2>contacto:Martin Piccini</h2>
+                <div>
+                    <img src="../icon/fb.png">
+                    <img src="../icon/instagram.png">
+                    <img src="../icon/Whatsapp.png">
+                    <img src="../icon/location.png">
+                </div>
+                
+            </div>
+        </footer>
+    </body>
 </html>
