--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<meta charset="UTF-8" />
+	<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Afiladospostai</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="../css/estilos.css" />
 	</head>
 	<body>
@@ -31,7 +40,7 @@
 				class="sobreNos animate__animated animate__bounce"
 				src="https://images.unsplash.com/photo-1617571607645-dd7dd3bf7f6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"
 			/>
-			<p class="notros__parrafo">
+			<p class="nosotros__parrafo">
 				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
 				tenetur atque, sed iste perferendis asperiores nostrum commodi
 				doloremque voluptatibus facere nisi odio similique molestiae sapiente
