--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</a>
 					<h1 class="fs-1">Postai</h1>
 					<h2 class="fs-3">
-						venta y afilados de herramientas,servicios industriales
+						Venta y afilados de herramientas de corte/servicios industriales
 					</h2>
 					<nav>
 						<ul>
@@ -76,7 +76,7 @@
 					</div>
 				</div>
 				<section class="row">
-					<h2>¿Como llegar?</h2>
+					<h2>¿Cómo llegar?</h2>
 					<article class="col-lg-7 col-xl-6 col-sm-12">
 						<iframe
 							class="mapa"
@@ -109,7 +109,7 @@
 					</ol>
 				</section>
 				<section>
-					<h2>novedades</h2>
+					<h2>Novedades</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus et sunt laborum nemo eius aliquam, vel accusamus facere illum incidunt fugiat iure asperiores officiis alias? Dolorem unde necessitatibus est.</p>
 				</section>
 			</menu>
