--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
-					<h1 class="fs-1">Postai</h1>
-					<h2 class="fs-3">
+					<h1>Postai</h1>
+					<h2>
 						Venta y afilados de herramientas de corte/servicios industriales
 					</h2>
 					<nav>
@@ -80,10 +80,8 @@
 					<article class="col-lg-7 col-xl-6 col-sm-12">
 						<iframe
 							class="mapa"
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar"
-							width="600"
-							height="400"
-						></iframe>
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar">
+						</iframe>
 					</article>
 					<aside class="col-lg-5 col-xl-6 col-sm-12">
 						<p class="fs-4">
