--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -35,8 +35,8 @@
 			<!-- Fin Header -->
 			<h1>Horarios de atención</h1>
 			<div class="divHorarios">
-				<section class="section">
-					<table class="table table-bordered">
+				<section>
+					<table class="table-bordered">
 						<thead>
 							<tr>
 								<th>Dias</th>
@@ -66,7 +66,7 @@
 					</table>
 				</section>
 				<aside>
-					<p class="horarioParrafo">
+					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid
 						perferendis voluptatibus in quas eos perspiciatis doloremque, placeat,
 						iure repellat eum? Dolorum quo ullam nihil ab facere, laborum officia
