--- a/index.html
+++ b/index.html
@@ -79,38 +79,27 @@
 				</div>
 				<section class="row">
 					<h2>¿Cómo llegar?</h2>
-					<article class="col-lg-7 col-xl-6 col-sm-12">
+					<article class="col-lg-12 col-xl-12 col-sm-12">
 						<iframe
 							class="mapa"
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar">
 						</iframe>
 					</article>
-					<aside class="col-lg-5 col-xl-6 col-sm-12">
+					<!-- <aside class="col-lg-5 col-xl-6 col-sm-12">
 						<p class="fs-4">
-							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint,
-							eum eveniet esse ipsa dicta nisi voluptatibus exercitationem
-							labore, deleniti ducimus numquam, assumenda cupiditate illum culpa
-							nesciunt reiciendis alias harum officiis! Rerum facilis
-							repudiandae pariatur aut ut veritatis numquam id libero ea nemo at
-							nam, maxime dolorum doloremque vero ullam optio mollitia ad?
-							Expedita voluptates culpa, vero libero ex veritatis temporibus.
+							
 						</p>
-					</aside>
+					</aside> -->
 				</section>
 				<section class="Servicios">
-					<h2 class="fs-4">Servicios</h2>
-					<p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam natus error, perferendis, quia necessitatibus placeat officia impedit nihil consequatur magni ratione esse dolorum explicabo, voluptatum quo minima ducimus ut?</p>
+					<h2>Servicios</h2>
+					<p class="fs-4">Proporcionamos un servicio de calidad, desde la provincia de Sante Fe para todo el pais. Atencion Personalizada , alta calidad de insumos </p>
 					<ol class="list-novedades">
-						<li class="list-item-nov">novedad 1</a></li>
-						<li class="list-item-nov">novedad 2</a></li>
-						<li class="list-item-nov">novedad 3</a></li>
-						<li class="list-item-nov">novedad 4</a></li>
-						<li class="list-item-nov">novedad 5</a></li>
+						<li class="list-item-nov fs-5">Venta y afilado de herramientas de corte (aserraderos, carnicería, jardinería, entre otras).</a></li>
+						<li class="list-item-nov fs-5">Soldaduras de sierra, tornería y metalmecánica</a></li>
+						<li class="list-item-nov fs-5">Arreglo y mantenimiento de máquinas de carpintería.</a></li>
+						<li class="list-item-nov fs-5">Afilado de tijeras en general (de peluquería, jardinería, tapicería entre otras).</a></li>
 					</ol>
-				</section>
-				<section>
-					<h2>Novedades</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus et sunt laborum nemo eius aliquam, vel accusamus facere illum incidunt fugiat iure asperiores officiis alias? Dolorem unde necessitatibus est.</p>
 				</section>
 			</menu>
 			<footer class="row">
@@ -121,7 +110,7 @@
 						</a>
 					</div>
 					<div>
-						<h2>contacto</h2>
+						<h2>Contacto</h2>
 						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
 					</div>
 					<div class="animate__animated animate__lightSpeedInRight">
