--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -36,35 +36,46 @@
 				</nav>
 			</div>
 		</header>
-		<h1>nosotros</h1>
+		<h1>Nosotros</h1>
 		<div class="div-padre">
 			<img
 				class="sobreNos animate__animated animate__bounce"
 				src="https://images.unsplash.com/photo-1617571607645-dd7dd3bf7f6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"
 			/>
 			<p class="nosotros__parrafo">
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-				tenetur atque, sed iste perferendis asperiores nostrum commodi
-				doloremque voluptatibus facere nisi odio similique molestiae sapiente
-				magni neque nesciunt pariatur dolor. Lorem ipsum, dolor sit amet
-				consectetur adipisicing elit. Quas eligendi nihil velit iure tenetur
-				numquam neque tempora incidunt nulla placeat. Lorem ipsum dolor, sit
-				amet consectetur adipisicing elit. Facere quidem saepe quaerat excepturi
-				officia soluta voluptatum, quisquam atque quod architecto culpa
-				molestias mollitia sint, iste dignissimos esse cupiditate a alias.
+				Afilaciones Postai es una empresa familiar que comenzó su trayectoria en el año 1984, cuando el dueño Antonio Postai decide disociarse del aserradero que tenia con sus hermanos. Por lo que abrió en su domicilio el taller de Afilados Postai; en el cuál se desempeñó por más de 35 años hasta su jubilación.
+			</p>
+			<p class="nosotros__parrafo">En esta empresa trabajaron diferentes personas, entre ellas sus hijas Graciela y Alicia que además de trabajar en el taller se encargaban del reparto en motocicletas a las diferentes carnicerías de Santa Fe, más tarde Martin Piccini su yerno trabajó codo a codo con Antonio aprendiendo el oficio para luego quedar encargado del lugar en el año 2004 continuando con el ya tradicional taller hasta el dia de la fecha.
 			</p>
 		</div>
 		<footer>
-			<div class="contenedor-footer">
-				<h2>contacto:Martin Piccini</h2>
-				<div>
-					<img src="../icon/fb.png">
-					<img src="../icon/instagram.png">
-					<img src="../icon/Whatsapp.png">
-					<img src="../icon/location.png">
+			<footer class="row">
+				<div class="contenedor-footer">
+					<div>
+						<a href="../index.html">
+							<img src="../imagenes/logo-removebg-preview.png" class="logo">
+						</a>
+					</div>
+					<div>
+						<h2>Contacto</h2>
+						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
+					</div>
+					<div class="animate__animated animate__lightSpeedInRight">
+						<a href="https://www.facebook.com/martinalepiccini">
+							<img src="../icon/fb.png" />
+						</a>
+						<a href="https://z-p15.www.instagram.com/afiladospostai/">
+							<img src="../icon/instagram.png" />
+						</a>
+						<a href="https://wa.me/5493424308844/">
+							<img src="../icon/Whatsapp.png" />
+						</a>
+						<a
+							href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183">
+						<img src="../icon/location.png" />
+						</a>
+					</div>
 				</div>
-				
-			</div>
 		</footer>
 	</body>
 </html>
