--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -47,7 +47,7 @@
 						</thead>
 						<tr>
 							<th>lunes</th>
-							<th>9a15</th>
+							<th>9a17</th>
 						</tr>
 						<tr>
 							<th>martes</th>
@@ -55,41 +55,54 @@
 						</tr>
 						<tr>
 							<th>miercoles</th>
-							<th>9a15</th>
+							<th>9a17</th>
 						</tr>
 						<tr>
 							<th>jueves</th>
-							<th>8a13</th>
+							<th>8a17</th>
 						</tr>
 						<tr>
 							<th>viernes</th>
-							<th>8a13</th>
+							<th>8a15</th>
 						</tr>
 					</table>
 				</section>
 				<aside>
+					<h3>Aclaración</h3>
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid
-						perferendis voluptatibus in quas eos perspiciatis doloremque, placeat,
-						iure repellat eum? Dolorum quo ullam nihil ab facere, laborum officia
-						veniam.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-						possimus ut quod magni repudiandae in suscipit ullam itaque. Enim
-						minima architecto repellendus error cupiditate illum! Accusamus beatae
-						maiores repellendus fugiat.
+					Sábados,domingos y feriados el taller no está abierto al público.Estamos a disposicion de manera virtual,contactate con nosotros por Whatsapp,instagram, Facebook o envianos un mensaje al siguiente correo "martinalepiccini@gmail.com"
 					</p>
 				</aside>
 			</div>
-			<footer id="footer">
-				<div class="contenedor-footer">
-					<h2>contacto:Martin Piccini</h2>
-					<div>
-						<img src="../icon/fb.png" />
-						<img src="../icon/instagram.png" />
-						<img src="../icon/Whatsapp.png" />
-						<img src="../icon/location.png" />
+			<footer>
+				<footer class="row">
+					<div class="contenedor-footer">
+						<div>
+							<a href="../index.html">
+								<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+							</a>
+						</div>
+						<div>
+							<h2>contacto</h2>
+							<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
+						</div>
+						<div class="animate__animated animate__lightSpeedInRight">
+							<a href="https://www.facebook.com/martinalepiccini">
+								<img src="../icon/fb.png" />
+							</a>
+							<a href="https://z-p15.www.instagram.com/afiladospostai/">
+								<img src="../icon/instagram.png" />
+							</a>
+							<a href="https://wa.me/5493424308844/">
+								<img src="../icon/Whatsapp.png" />
+							</a>
+							<a
+								href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183">
+							<img src="../icon/location.png" />
+							</a>
+						</div>
 					</div>
-				</div>
 			</footer>
-	    </div>
+		</div>
 	</body>
 </html>
