--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -81,17 +81,34 @@
                 <p>datos de la imagen</p>
             </div>
         </section>
-        <footer >
-            <div class="contenedor-footer">
-                <h2>contacto:Martin Piccini</h2>
-                <div>
-                    <img src="../icon/fb.png">
-                    <img src="../icon/instagram.png">
-                    <img src="../icon/Whatsapp.png">
-                    <img src="../icon/location.png">
-                </div>
-                
-            </div>
-        </footer>
+		<footer>
+			<footer class="row">
+				<div class="contenedor-footer">
+					<div>
+						<a href="../index.html">
+							<img src="../imagenes/logo-removebg-preview.png" class="logo" />
+						</a>
+					</div>
+					<div>
+						<h3>Contacto</h3>
+						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
+					</div>
+					<div class="animate__animated animate__lightSpeedInRight">
+						<a href="https://www.facebook.com/martinalepiccini">
+							<img src="../icon/fb.png" />
+						</a>
+						<a href="https://z-p15.www.instagram.com/afiladospostai/">
+							<img src="../icon/instagram.png" />
+						</a>
+						<a href="https://wa.me/5493424308844/">
+							<img src="../icon/Whatsapp.png" />
+						</a>
+						<a
+							href="https://www.google.com/maps/place/Postai/@-31.6150809,-60.685407,17z/data=!3m1!4b1!4m5!3m4!1s0x95b5a9fb98e0a763:0x57981626e9b28819!8m2!3d-31.6150855!4d-60.6832183">
+						<img src="../icon/location.png" />
+						</a>
+					</div>
+				</div>
+		</footer>
     </body>
 </html>
