--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 						</p>
 					</aside> -->
 				</section>
-				<section class="Servicios">
-					<h2>Servicios</h2>
-					<p class="fs-4">Proporcionamos un servicio de calidad, desde la provincia de Sante Fe para todo el pais. Atencion Personalizada , alta calidad de insumos </p>
-					<ol class="list-novedades">
-						<li class="list-item-nov fs-5">Venta y afilado de herramientas de corte (aserraderos, carnicería, jardinería, entre otras).</a></li>
-						<li class="list-item-nov fs-5">Soldaduras de sierra, tornería y metalmecánica</a></li>
-						<li class="list-item-nov fs-5">Arreglo y mantenimiento de máquinas de carpintería.</a></li>
-						<li class="list-item-nov fs-5">Afilado de tijeras en general (de peluquería, jardinería, tapicería entre otras).</a></li>
+				<section>
+					<h2 class="fs-4">Servicios</h2>
+					<p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ipsam natus error, perferendis, quia necessitatibus placeat officia impedit nihil consequatur magni ratione esse dolorum explicabo, voluptatum quo minima ducimus ut?</p>
+					<ol>
+						<li class="fs-5">Venta y afilado de herramientas de corte (aserraderos, carnicería, jardinería, entre otras).</a></li>
+						<li class="fs-5">Soldaduras de sierra, tornería y metalmecánica</a></li>
+						<li class="fs-5">Arreglo y mantenimiento de máquinas de carpintería.</a></li>
+						<li class="fs-5">Afilado de tijeras en general (de peluquería, jardinería, tapicería entre otras).</a></li>
 					</ol>
 				</section>
 			</menu>
@@ -110,7 +110,7 @@
 						</a>
 					</div>
 					<div>
-						<h2>Contacto</h2>
+						<h2>contacto</h2>
 						<p>Martin piccini cel:342- 8388723873 fijo: 342 4608997</p>
 					</div>
 					<div class="animate__animated animate__lightSpeedInRight">
