--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content=" contactate con nosotros,deja un comentario sobre dudas y opiniones de nuestro taller de afilaciones.">
+		<meta name="description" content="horarios de atención">
 		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
-		<title>contacto</title>
+		<title>horarios</title>
 		<link rel="shortcut icon" href="../imagenes/favicon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/estilos.css" />
+		<link rel="stylesheet" href="../css/pruebacss.css" />
 	</head>
 	<body>
 		<header>
@@ -88,16 +88,7 @@
 			</form>
 		</div>
 		<p>
-			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id doloremque
-			corrupti magnam eius cumque. Id non nihil a ipsam illum? Provident, fugiat
-			voluptatibus. Nemo debitis repudiandae voluptatum at facere! Quibusdam.
-			Quia voluptatem incidunt repellendus! Adipisci, ad nisi nemo possimus
-			praesentium repellat. Ratione maxime eveniet vel soluta excepturi ducimus
-			deserunt reiciendis porro, facilis velit magnam officia eum nam dolore
-			numquam asperiores. Nesciunt, eum. Amet cum, dolorem quaerat rerum sunt,
-			repellendus sint ipsum accusamus architecto recusandae eveniet inventore
-			nesciunt non sed corporis harum voluptatem ea? Autem dolorem, natus
-			eveniet vel non consequatur.
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi odio cupiditate exercitationem laudantium ut, quod consectetur. Est, error vitae nostrum, unde in, laboriosam iusto vero ab magnam ex nemo dolorum.
 		</p>
 		<footer>
 			<footer class="row">
