--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="proporcionamos un servicio de venta y afilado de herramientas de corte,el siguiente contenido detalla los insumos disponibles en nuestro taller.">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="horarios de atención">
 		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
-        <title>insumos</title>
-        <link rel="shortcut icon" href="../imagenes/favicon.png">
-        <link
-                href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-                rel="stylesheet"
-                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-                crossorigin="anonymous"
-            />
-        <link rel="stylesheet" href="../css/estilos.css">
-    </head>
+		<title>horarios</title>
+		<link rel="shortcut icon" href="../imagenes/favicon.png" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="../css/pruebacss.css" />
+	</head>
     <body>
         <header>
                 <div class="contenedor-header">
