--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-	<meta charset="UTF-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>sobre nosotros</title>
-		<link rel="shortcut icon" href="../imagenes/favicon.png" />
-		<meta name="description" content="conoce como comenzó nuestro taller">
+		<meta name="description" content="horarios de atención">
 		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-		/>
+		<title>horarios</title>
+		<link rel="shortcut icon" href="../imagenes/favicon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/estilos.css" />
+		<link rel="stylesheet" href="../css/pruebacss.css" />
 	</head>
 	<body>
 		<header>
