--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -23,11 +23,11 @@
 				</a>
 				<nav>
 					<ul>
-						<li><a href="../index.html">inicio</a></li>
-						<li><a href="sobrenosotros.html">nosotros</a></li>
-						<li><a href="horarios.html">horarios</a></li>
-						<li><a href="insumos.html">insumos</a></li>
-						<li><a href="contacto.html">contacto</a></li>
+						<li><a href="../index.html">INICIO</a></li>
+						<li><a href="sobrenosotros.html">NOSOTROS</a></li>
+						<li><a href="horarios.html">HORARIOS</a></li>
+						<li><a href="insumos.html">INSUMOS</a></li>
+						<li><a href="contacto.html">CONTACTOS</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -41,8 +41,11 @@
 			<p class="nosotros__parrafo">
 				Afilaciones Postai es una empresa familiar que comenzó su trayectoria en el año 1984, cuando el dueño Antonio Postai decide disociarse del aserradero que tenia con sus hermanos. Por lo que abrió en su domicilio el taller de Afilados Postai; en el cuál se desempeñó por más de 35 años hasta su jubilación.
 			</p>
-			<p class="nosotros__parrafo">En esta empresa trabajaron diferentes personas, entre ellas sus hijas Graciela y Alicia que además de trabajar en el taller se encargaban del reparto en motocicletas a las diferentes carnicerías de Santa Fe, más tarde Martin Piccini su yerno trabajó codo a codo con Antonio aprendiendo el oficio para luego quedar encargado del lugar en el año 2004 continuando con el ya tradicional taller hasta el dia de la fecha.
-			</p>
+		</div>
+		<div class="div-padre">
+				<p class="nosotros__parrafo">En esta empresa trabajaron diferentes personas, entre ellas sus hijas Graciela y Alicia que además de trabajar en el taller se encargaban del reparto en motocicletas a las diferentes carnicerías de Santa Fe, más tarde Martin Piccini su yerno trabajó codo a codo con Antonio aprendiendo el oficio para luego quedar encargado del lugar en el año 2004 continuando con el ya tradicional taller hasta el dia de la fecha.
+				</p>
+				<img src="https://images.unsplash.com/photo-1617571607645-dd7dd3bf7f6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"/>
 		</div>
 		<footer>
 			<footer class="row">
