--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-			crossorigin="anonymous"
-		></script>
 		<link rel="shortcut icon" href="imagenes/favicon.png" />
 		<link
 			rel="stylesheet"
@@ -26,13 +21,18 @@
 		<link rel="stylesheet" href="css/pruebacss.css" />
 	</head>
 	<body>
-		<div class="conteiner">
-			<header class="row">
-				<div class="header">
+		<div>
+			<header>
+				<div>
 					<a href="index.html">
 						<img src="imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
 					<nav>
+						<input type="checkbox" id="check">
+						<label for="check" class="checkbtn">
+							<a href="#">
+								<img src="icon/menu.png" alt="menu">
+						</label>
 						<ul>
 							<li><a href="index.html">INICIO</a></li>
 							<li><a href="pages/sobrenosotros.html">NOSOTROS</a></li>
@@ -44,11 +44,11 @@
 				</div>
 			</header>
 			<!-- Fin Header -->
-			<menu class="menu row">
+			<menu>
 				<h1>Postai</h1>
-					<h2>
-						Venta y afilados de herramientas de corte/servicios industriales
-					</h2>
+				<h2>
+					Venta y afilados de herramientas de corte/servicios industriales
+				</h2>
 				<div class="carrusel">
 					<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 						<div class="carousel-indicators">
@@ -58,13 +58,13 @@
 						</div>
 						<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="imagenes/carrusel1.png" class="d-block w-100" alt="...">
+							<img src="imagenes/carrusel1-min.png" class="d-block w-100" alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="imagenes/carrusel2.png" class="d-block w-100" alt="...">
+							<img src="imagenes/carrusel2-min.png" class="d-block w-100" alt="...">
 						</div>
 						<div class="carousel-item">
-							<img src="imagenes/carrusel3.png" class="d-block w-100" alt="...">
+							<img src="imagenes/carrusel3-min.png" class="d-block w-100" alt="...">
 						</div>
 						</div>
 						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -77,7 +77,7 @@
 						</button>
 					</div>
 				</div>
-				<section class="row">
+				<section>
 					<h2>¿Cómo llegar?</h2>
 					<article class="col-lg-12 col-xl-12 col-sm-12">
 						<iframe
@@ -85,11 +85,6 @@
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.6862056091704!2d-60.685401084846994!3d-31.615057081338456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9fb98e0a763%3A0x57981626e9b28819!2sPostai!5e0!3m2!1ses-419!2sar!4v1651180331055!5m2!1ses-419!2sar">
 						</iframe>
 					</article>
-					<!-- <aside class="col-lg-5 col-xl-6 col-sm-12">
-						<p class="fs-4">
-							
-						</p>
-					</aside> -->
 				</section>
 				<section>
 					<h2 class="fs-4">Servicios</h2>
@@ -128,5 +123,10 @@
 				</div>
 			</footer>
 		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
