--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
-<html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="horarios de atención">
-		<meta name="keywords" content="afilados,afilaciones,taller de afilados">
-		<title>contacto</title>
-		<link rel="shortcut icon" href="../imagenes/favicon.png" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-			crossorigin="anonymous"
-		/>
-		<link rel="stylesheet" href="../css/pruebacss.css" />
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="conoce nuestro taller de afilaciones,proporcionamos un servicio de venta y afilado de herramientas de corte">
+	<meta name="keywords" content="afilados,afilaciones,taller de afilados">
+	<title>afiladospostai</title>
+	<link
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+		crossorigin="anonymous"
+	/>
+	<link rel="shortcut icon" href="../imagenes/favicon.png" />
+	<link
+		rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+	/>
+	<link rel="stylesheet" href="../css/pruebacss.css" />
+</head>
 	<body>
 		<header>
-			<div class="contenedor-header">
+			<div>
 				<a href="../index.html">
 					<img src="../imagenes/logo-removebg-preview.png" class="logo" />
 				</a>
 				<nav>
 					<ul>
-						<li><a href="../index.html">inicio</a></li>
-						<li><a href="sobrenosotros.html">nosotros</a></li>
-						<li><a href="horarios.html">horarios</a></li>
-						<li><a href="insumos.html">insumos</a></li>
-						<li><a href="contacto.html">contacto</a></li>
+						<li><a href="../index.html">INICIO</a></li>
+						<li><a href="sobrenosotros.html">NOSOTROS</a></li>
+						<li><a href="horarios.html">HORARIOS</a></li>
+						<li><a href="insumos.html">INSUMOS</a></li>
+						<li><a href="contacto.html">CONTACTOS</a></li>
 					</ul>
 				</nav>
 			</div>
 		</header>
 		<!-- Fin Header -->
 		<h1>Contacto</h1>
-		<div class="container mb-3">
+		<div class=" mb-3">
 			<form class="col-sm-6">
 				<div class="col-sm-12 mb-3">
 					<label for="nombre" class="form-label">Nombre y Apellido</label>
