--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -13,22 +13,23 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<link rel="shortcut icon" href="imagenes/favicon.png" />
 		<link rel="stylesheet" href="../css/pruebacss.css" />
 	</head>
 	<body>
 		<div class="body">
 			<header>
-				<div class="contenedor-header">
+				<div>
 					<a href="../index.html">
 						<img src="../imagenes/logo-removebg-preview.png" class="logo" />
 					</a>
 					<nav>
 						<ul>
-							<li><a href="../index.html">inicio</a></li>
-							<li><a href="sobrenosotros.html">nosotros</a></li>
-							<li><a href="horarios.html">horarios</a></li>
-							<li><a href="insumos.html">insumos</a></li>
-							<li><a href="contacto.html">contacto</a></li>
+							<li><a href="../index.html">INICIO</a></li>
+							<li><a href="sobrenosotros.html">NOSOTROS</a></li>
+							<li><a href="horarios.html">HORARIOS</a></li>
+							<li><a href="insumos.html">INSUMOS</a></li>
+							<li><a href="contacto.html">CONTACTOS</a></li>
 						</ul>
 					</nav>
 				</div>
