--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -17,17 +17,17 @@
 	</head>
     <body>
         <header>
-                <div class="contenedor-header">
+                <div>
                     <a href="../index.html">
                         <img src="../imagenes/logo-removebg-preview.png" class="logo" />
                     </a>
                     <nav>
                         <ul>
-                            <li><a href="../index.html">inicio</a></li>
-                            <li><a href="sobrenosotros.html">nosotros</a></li>
-                            <li><a href="horarios.html">horarios</a></li>
-                            <li><a href="insumos.html">insumos</a></li>
-                            <li><a href="contacto.html">contacto</a></li>
+                            <li><a href="../index.html">INICIO</a></li>
+                            <li><a href="sobrenosotros.html">NOSOTROS</a></li>
+                            <li><a href="horarios.html">HORARIOS</a></li>
+                            <li><a href="insumos.html">INSUMOS</a></li>
+                            <li><a href="contacto.html">CONTACTOS</a></li>
                         </ul>
                     </nav>
                 </div>
